# iris

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/iris_backend/: Cargo.toml  iris_backend.did
src/iris_backend/src/: lib.rs  types.rs
src/iris_backend/src/api/: invoice_api.rs  merchant_api.rs  mod.rs  payment_api.rs  user_api.rs
src/iris_backend/src/models/: bitcoin.rs  invoice.rs  merchant.rs  mod.rs  payment.rs  payment_method.rs  qr.rs  user.rs
src/iris_backend/src/models/enums/: cashout_status.rs  currency.rs  invoice_status.rs  mod.rs  payment_method.rs  payment_status.rs  user_role.rs
src/iris_backend/src/services/: bitcoin_service.rs  exchange_service.rs  invoice_service.rs  mod.rs  payment_service.rs  qr_service.rs
src/iris_backend/src/storage/: state.rs
src/iris_backend/src/utils/: constant.rs  errors.rs  mod.rs  validation.rs
src/iris_frontend/: package.json  tailwind.config.ts  tsconfig.json  webpack.config.js
src/iris_frontend/src/: App.tsx  auth.js  index.css  index.html  index.tsx  layout.tsx
src/iris_frontend/src/action/: auth.action.ts
src/iris_frontend/src/components/: BalanceCard.tsx  FeaturesCarousel.tsx  MerchantInfo.tsx  PaymentMethodSelector.tsx  PaymentSummary.tsx  ProtectedRoutes.tsx  ScanToPay.tsx  SuccessAnimation.tsx  TransactionCard.tsx
src/iris_frontend/src/lib/: utils.ts
src/iris_frontend/src/pages/: CustomerDashboard.tsx  CustomerPaymentSuccess.tsx  CustomerProfile.tsx  CustomerScan.tsx  CustomerScanStatic.tsx  InputEnterAmount.tsx  InputMerchantName.tsx  Landing.tsx  (+9 more)
(+10 files in other folders)
