[package]
name = "iris_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
bs58 = { workspace = true }
urlencoding = { workspace = true }